--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Hungry Fish</title>
     <script src="./lib/phaser.js"></script>
     <script src="./src/Scenes/Shooter.js"></script>
+    <script src="./src/Scenes/GameOver.js"></script>
     <script src="./src/main.js"></script>
 </head>
 <body>
