--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <script src="./lib/phaser.js"></script>
     <script src="./src/Scenes/Shooter.js"></script>
     <script src="./src/Scenes/GameOver.js"></script>
+    <script src="./src/Scenes/Title.js"></script>
     <script src="./src/main.js"></script>
 </head>
 <body>
     <div id="phaser-game"></div>
     <span id="description"></span>
+    <b>Controls: W, S (movement) + Space (shoot)</b>
+    <p>You are being chased by hungry fish that are releasing poisonous saliva at the sight of you! With some extra food in hand (or fins), satisfy their craving so they stop coming for you.
+        But be careful, your stock is limited and only replenishes when you feed some to another fish. If a fish gets to your location, it's instant death!
+    </p>
 </body>
 </html>
